# carbone_sdk_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: Untitled-1.rs  carbone.rs  carbone_response.rs  config.rs  lib.rs  render.rs  template.rs  types.rs
src/blocking/: mod.rs
src/carbone_sdk/: carbone.rs  config.rs
src/carbone_sdk/errors/: mod.rs
src/errors/: mod.rs
src/http/blocking/: client.rs
tests/: blocking.rs  blocking_carbone_test.rs  carbone_response_test.rs  carbone_test.rs  config.json  config.test.json  config_test.rs  helper.rs  render_test.rs  template_test.rs  types_test.rs
tests/data/: .~lock.template.odt#  .~lock.template.test.odt#  report_data.json  template.odt  template.test.txt
