[package]
name = "carbone_sdk_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.3"
ring = "0.16.20"
bytes = "1.4.0"
reqwest = { version = "0.11.16", features = ["multipart", "blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
anyhow = "1.0.71"
validator = { version = "0.16", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
httpmock = "0.6"