[package]
name = "carbone_sdk_rs"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Chenevas-Paule <pcp.dev@posteo.de>"]
description = "A library to communicate with the Carbone API (http://carbone.io)"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = []
#default = ["blocking"]

[[test]]
name = "blocking"
path = "tests/blocking.rs"
required-features = ["blocking"]

[dependencies]
mime_guess = "2"
data-encoding = "2"
ring = "0.16.20"
bytes = "1.4.0"
reqwest = { version = "0.11.16", features = ["multipart", "blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_with = "3.1.0"
serde_json = "1.0.95"
thiserror = "1.0.40"
anyhow = "1.0.71"
validator = { version = "0.16", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
httpmock = "0.6"
tokio = { version = "1", features = ["full"] }